--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
     <div class="container-fluid" ng-view></div>
     <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
 
+    <script src="components/jquery/jquery.js"></script>
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-resource/angular-resource.js"></script>
     <script src="components/angular-cookies/angular-cookies.js"></script>
