--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
     <!-- Add your site or application content here -->
     <div class="container-fluid" ng-view></div>
-    <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
+    <script type='text/javascript' src='http://localhost:9002/socket.io/socket.io.js'></script>
 
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-resource/angular-resource.js"></script>
