--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container-fluid" ng-view></div>
+    <div ng-view></div>
     <script type='text/javascript' src='http://localhost:9002/socket.io/socket.io.js'></script>
 
     <script src="components/jquery/jquery.js"></script>
