--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
     <script src="scripts/controllers/filebrowser.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/player.js"></script>
+    <script src="scripts/directives/scrollBottom.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
