--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
     <script src="scripts/controllers/player.js"></script>
     <script src="scripts/directives/scrollBottom.js"></script>
     <script src="scripts/controllers/interface.js"></script>
+    <script src="scripts/controllers/windows.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
