getting rid of revision

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="styles/051c0509.main.css">
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body ng-app="p2pmusicApp">
     <!--[if lt IE 7]>
@@ -32,7 +32,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-cookies.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-sanitize.min.js"></script>
 
-    <script src="scripts/01c64040.scripts.js"></script>
+    <script src="scripts/scripts.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
