--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Add your site or application content here -->
     <div ng-view=""></div>
-    <script type="text/javascript" src="http://localhost:9002/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="http://slskjs.nodejitsu.com/socket.io/socket.io.js"></script>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
