--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
     <!-- Add your site or application content here -->
     <div ng-view></div>
-    <script type='text/javascript' src='http://localhost:9002/socket.io/socket.io.js'></script>
+    <script type='text/javascript' src='http://slskjs.nodejitsu.com/socket.io/socket.io.js'></script>
 
     <script src="components/jquery/jquery.js"></script>
     <script src="components/angular/angular.js"></script>
