--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,8 @@
 
     <!-- Add your site or application content here -->
     <div ng-view></div>
-    <script type='text/javascript' src='http://slskjs.nodejitsu.com/socket.io/socket.io.js'></script>
+    <!--<script type='text/javascript' src='http://slskjs.nodejitsu.com/socket.io/socket.io.js'></script>-->
+    <script src='https://cdn.firebase.com/v0/firebase.js'></script>
 
     <script src="components/jquery/jquery.js"></script>
     <script src="components/angular/angular.js"></script>
