--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="styles/main.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">
   </head>
   <body ng-app="p2pmusicApp">
     <!--[if lt IE 7]>
@@ -25,7 +24,8 @@
 
     <!-- Add your site or application content here -->
     <div ng-view=""></div>
-    <script type="text/javascript" src="http://slskjs.nodejitsu.com/socket.io/socket.io.js"></script>
+    <!--<script type='text/javascript' src='http://slskjs.nodejitsu.com/socket.io/socket.io.js'></script>-->
+    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
